# WasmPlugin-ShopifyFilter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  envoy.yaml
src/: lib.rs
